# FullScreenModes

./: CMakeLists.txt
src/FullScreenModes/: main.cpp
